# Integration-Project-2

./: CMakeLists.txt
include/: Catalogo.h  Interface.h  Linha.h  Modelo.h
src/: Catalogo.cpp  Interface.cpp  Linha.cpp  Modelo.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: teste_Catalogo.cpp
